refactorized node-telegram-bot-api definitions

--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     },
     "typescript": {
         "definitions": [
-          "definitions/src/telegram-interfaces.d.ts",
-          "definitions/src/typedgram-bot.d.ts",
-          "src/telegram.d.ts"
+          "definitions/src/typedgram-bot.d.ts"
         ]
     },
     "repository": {
