--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,22 +14,21 @@
         "outDir": "./lib"
     },
     "filesGlob": [
+        "typings/**/*.ts",
         "src/**/*.ts",
         "test/**/*.ts",
-        "typings/**/*.ts",
         "!./node_modules/**/*",
         "!./example/typescript.ts"
     ],
     "files": [
-        "src/telegram-interfaces.ts",
-        "src/telegram.d.ts",
-        "src/typedgram-bot.ts",
-        "test/import.ts",
         "typings/bluebird/bluebird.d.ts",
         "typings/chai/chai.d.ts",
         "typings/mocha/mocha.d.ts",
+        "typings/node-telegram-bot-api/node-telegram-bot-api.d.ts",
         "typings/node/node.d.ts",
-        "typings/tsd.d.ts"
+        "typings/tsd.d.ts",
+        "src/typedgram-bot.ts",
+        "test/import.ts"
     ],
     "formatCodeOptions": {
         "indentSize": 4,
