--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     },
     "dependencies": {
         "bluebird": "^2.10.0",
-        "node-telegram-bot-api": "^0.12.1"
+        "node-telegram-bot-api": "mrpatiwi/node-telegram-bot-api"
     },
     "devDependencies": {
         "chai": "^3.2.0",
