--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
         "typescript",
         "typed"
     ],
-    "licenses": [{
-        "type": "MIT",
-        "url": "https://github.com/mrpatiwi/typedgram-bot/blob/master/LICENSE-MIT"
-    }],
+    "license": "MIT",
     "scripts": {
+        "prepublish": "gulp build",
         "build": "gulp build",
+        "pretest": "gulp build",
         "test": "mocha"
     },
     "typescript": {
@@ -41,9 +40,10 @@
         "dts-bundle": "^0.3.0",
         "gulp": "^3.9.0",
         "gulp-typedoc": "^1.2.1",
-        "gulp-typescript": "^2.8.2",
+        "gulp-typescript": "^2.9.0",
         "merge2": "^0.3.6",
         "mocha": "~2.3.2",
-        "typedoc": "^0.3.10"
+        "typedoc": "^0.3.10",
+        "typescript": "^1.6.2"
     }
 }
