added example/test build output to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@
 
 # Tests should be transpiled locally
 definitions/test
+definitions/example
+definitions/index.d.ts
 lib/test
+lib/example
+lib/index.js
 
 # Logs
 logs
