--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     ],
     "license": "MIT",
     "scripts": {
-        "prepublish": "gulp build",
         "build": "gulp build",
         "pretest": "gulp build",
         "test": "mocha lib/test",
@@ -34,18 +33,18 @@
         "url": "https://github.com/mrpatiwi/typedgram-bot/issues"
     },
     "dependencies": {
-        "bluebird": "^2.10.0",
-        "node-telegram-bot-api": "mrpatiwi/node-telegram-bot-api"
+        "bluebird": "^2.10.2",
+        "node-telegram-bot-api": "^0.14.0"
     },
     "devDependencies": {
-        "chai": "^3.2.0",
+        "chai": "^3.3.0",
         "dts-bundle": "^0.3.0",
         "gulp": "^3.9.0",
         "gulp-typedoc": "^1.2.1",
-        "gulp-typescript": "^2.9.0",
+        "gulp-typescript": "^2.9.2",
         "merge2": "^0.3.6",
-        "mocha": "~2.3.2",
-        "typedoc": "^0.3.10",
+        "mocha": "~2.3.3",
+        "typedoc": "^0.3.12",
         "typescript": "^1.6.2"
     }
 }
